Revision history for Quiki

0.01_2
        This second beta version features:
         - First templating structure;
         - Gravatar support on user profile;
         - Attach support / mimetype guessing;
         - Inline external image inclusion;

0.01_1    Sun Sep  6 14:22:48 WEST 2009
        First version, released on an unsuspecting world full of other wikis.
        This release features:
         - installation script;
         - Basic authentication;
         - Basic Wiki formatter:
           - paragraphs, bolds, italics, typewritter, hard-rules;
           - internal and external links and named links;
           - ordered and bulleted lists at multiple depths;
           - tables with alignment properties;
           - verbatim zones;
         - Basic control version with rollback and diff utils;
         - Basic lock mechanism;
         - Password and email change option;