@@ -6,6 +6,7 @@ Revision history for Quiki
          - Gravatar support on user profile;
          - Attach support / mimetype guessing;
          - Inline external image inclusion;
+         - Inline internal attach inclusion;
 
 0.01_1    Sun Sep  6 14:22:48 WEST 2009
         First version, released on an unsuspecting world full of other wikis.
